--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'primeflex/primeflex.min.css';
+@import 'primeicons/primeicons.css';
+@import 'primeng/resources/primeng.min.css';
+@import 'primeng/resources/themes/rhea/theme.css';
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:300); /*Calling our web font*/
+body{
+    font-family: Roboto,"Helvetica Neue",sans-serif;
+    margin: 0px;
+}
+
+.form-container {
+    padding: 30px;
+    background-color: #1C2541;
+    min-width: 400px;
+    max-width: 400px;
+    border-radius: 10px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.logo-class {
+    text-align: center;
+}
+
+.logo-class img{
+    min-width: 220px;
+    width: 70%;
+}
+
+.p-button-block {
+    width: 100%;
+    .p-button {
+        width: 100%;
+    }
+}
+
+.pl-1 {
+    padding-left: 10px;
+}
+
+.m-1 {
+    margin:15px;
+}
