--- a/src/app/user/components/forgot-password/forgot-password.component.html
+++ b/src/app/user/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,43 @@
-<p>forgot-password works!</p>
+<div class="form-container p-shadow-24">
+    <div class="p-grid">
+        <div class="p-col"></div>
+        <div class="p-col logo-class">
+            <img src="assets/Logos/tracker_light.png">
+        </div>
+        <div class="p-col"></div>
+    </div>
+    <p-messages></p-messages>
+    <form [formGroup]="forgotPasswordForm" (ngSubmit)="resetPassword()">
+        <div class="p-m-3">
+            <div class="p-inputgroup">
+                <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+                <input type="text" pInputText formControlName="email" placeholder="Email">         
+            </div>
+            <div>
+                <small id="username2-help" class="p-invalid" 
+                    *ngIf="emailCtrl.errors?.required && submitted">
+                    Email is required
+                </small>
+                <small id="username2-help" class="p-invalid" 
+                    *ngIf="emailCtrl.errors?.email && submitted">
+                    Please enter valid mail Id
+                </small>
+            </div>
+        </div>
+        <div class="p-m-3">
+            <div class="p-inputgroup">
+                <p-button type="submit" label="Reset Password" class="p-button-block p-button-raised" icon="pi pi-unlock"></p-button>
+            </div>
+        </div>
+        <div class="p-mt-3 p-mb-1 p-text-center link-text">
+            <small>
+                Not a member? <a href="javascript:" (click)="navigateToPage('user/register')">Register</a>
+            </small>
+        </div>
+        <div class="p-mb-3 p-text-center link-text">
+            <small>
+                Got Password? <a href="javascript:" (click)="navigateToPage('user/login')">Login</a>
+            </small>
+        </div>
+    </form>
+</div>
