--- a/src/app/user/components/register/register.component.html
+++ b/src/app/user/components/register/register.component.html
@@ -89,6 +89,15 @@
                 <p-button type="submit" label="Register" class="p-button-block p-button-raised" icon="pi pi-user-plus"></p-button>
             </div>
         </div>
-        <div class="p-mb-3 p-text-center">Center</div>
+        <div class="p-mt-3 p-mb-1 p-text-center link-text">
+            <small>
+                Already a member? <a href="javascript:" (click)="navigateToPage('user/login')">Login</a>
+            </small>
+        </div>
+        <div class="p-mb-3 p-text-center link-text">
+            <small>
+                Forgot Password? <a href="javascript:" (click)="navigateToPage('user/forgot-pass')">Click here</a>
+            </small>
+        </div>
     </form>
 </div>
